[gd_scene load_steps=2 format=3 uid="uid://c3vvl2yg8uv2f"]

[ext_resource type="Script" path="res://assets/test/test_cards.gd" id="1_12345"]

[node name="TestCards" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12345")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.05, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Whispers from the Radiant - Stage 1 Test"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 110.0
offset_right = 400.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = "Testing card generation and display system"
horizontal_alignment = 1

[node name="CardContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -100.0
offset_right = 500.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="InfoPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="DeckInfo" type="Label" parent="InfoPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Total cards in deck: 33"
horizontal_alignment = 1

[node name="AspectCounts" type="Label" parent="InfoPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.8, 0.8, 0.9, 1)
text = "Mental: 11 | Physical: 11 | Temporal: 11"
horizontal_alignment = 1

[node name="AbilityCards" type="Label" parent="InfoPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
text = "Special ability cards: 1, 3, 5, 7, 9, 11 (18 total)"
horizontal_alignment = 1
